# adventofcode2022

java/: .gitignore  README.md  build.gradle  settings.gradle
java/src/main/java/net/ddns/spellbank/day01/: Day01.java
java/src/main/java/net/ddns/spellbank/day02/: Day02.java
java/src/main/java/net/ddns/spellbank/day03/: Day03.java
java/src/main/java/net/ddns/spellbank/day04/: Day04.java
java/src/main/java/net/ddns/spellbank/day05/: Day05.java
java/src/main/java/net/ddns/spellbank/day06/: Day06.java
java/src/main/java/net/ddns/spellbank/day07/: Day07.java  FileSystem.java
java/src/main/java/net/ddns/spellbank/day08/: Day08.java
java/src/main/java/net/ddns/spellbank/day09/: Day09.java  IRope.java  Rope.java  Ropes.java
java/src/main/java/net/ddns/spellbank/day10/: Day10.java
java/src/main/java/net/ddns/spellbank/day11/: Day11.java  Monkey.java
java/src/main/java/net/ddns/spellbank/day12/: Day12.java
rust/: README.md  cargo.toml
rust/day01/src/: main.rs
rust/day02/src/: main.rs
rust/day03/src/: main.rs
rust/day04/src/: main.rs
rust/day05/src/: main.rs
rust/day06/src/: main.rs
rust/day07/src/: main.rs
rust/day08/src/: main.rs
rust/day09/: Cargo.toml
rust/day09/src/: main.rs
rust/day10/src/: main.rs
rust/day11/src/: main.rs
rust/day12/: Cargo.toml
rust/day12/src/: main.rs
rust/day13/: Cargo.toml
rust/day13/src/: main.rs
rust/day14/: Cargo.toml
rust/day14/src/: main.rs
rust/day15/: Cargo.toml
rust/day15/benches/: my_benchmark.rs
rust/day15/src/: lib.rs  main.rs
(+45 files in other folders)
